--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,32 @@
 
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Tic Tac Toe</title>
+  </head>
+  <body>
+    <H1>Tic Tac Toe</H1>
+    <button class="reset">reset</button>
+    <table id="board">
+      <link href="style.css" rel="stylesheet" type="text/css">
+      <tr>
+        <td class="top-left"></td>
+        <td class="top-middle"></td>
+        <td class="top-right"></td>
+      </tr>
+      <tr>
+        <td class="middle-left"></td>
+        <td class="middle-middle"></td>
+        <td class="middle-right"></td>
+      </tr>
+      <tr>
+        <td class="bottom-left"></td>
+        <td class="bottom-middle"></td>
+        <td class="bottom-right"></td>
+      </tr>
+    </table>
+    <script src="./app.js"></script>
+  </body>
+</html>
