--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,16 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>My test page</title>
+  </head>
+  <body>
+    <form id=form method="POST" action="/upload_json" enctype="multipart/form-data">
+      <input id='data' type='file' name="data">
+      <input id="submit" type="submit" value="Submit">
+    </form>
+    <div id="csv"></div>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script src="./app.js"></script>
+  </body>
+</html>
