--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Multistep Checkout</title>
+  </head>
+  <body>
+    <div id="app" ></div>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
+  </body>
+</html>
 
