--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -8,6 +8,7 @@
     <div id="app" ></div>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="./app.js"></script>
   </body>
 </html>
